--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "A small server app to demonstrate CRUD over an HTTP API",
   "main": "restfulExpressServer.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon restfulExpressServer.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "express": "^4.18.2",
+    "file-system": "^2.2.2",
     "nodemon": "^1.9.1"
   }
 }
