--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "file-system": "^2.2.2",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "pg": "^8.9.0"
   }
 }
